# kldlkfjkqdf

./: prompt.txt  prompt1.txt
asm_project/: CMakeLists.txt  COMPLETION_REPORT.md  CRITICAL_CHECKS.md  CRITICAL_FIXES_APPLIED.md  FINAL_VALIDATION.md  IMPROVEMENTS_APPLIED.md  PRODUCTION_FEATURES.md  QUICK_START.md  README.md  ULTIMATE_CHECKLIST.md  WEB_AGENT_IMPLEMENTATION.md  build.bat  build.sh
asm_project/core/: async_loader.h  consensus_algorithm.h  context_protocol.h  deterministic_router.h  expert_validator.h  inference_engine.h  memory_manager.h  memory_pool.h  memory_safety.h  power_scheduler.h  resilient_manager.h  router.h  safety_guardrail.h  simd_dispatch.h  system_info.h  telemetry.h  thermal_scheduler.h  universal_tokenizer.h
asm_project/core/web_agent/: search_orchestrator.h  smart_scraper.h
asm_project/formats/: asm_format.h
asm_project/src/: async_loader.cpp  context_protocol.cpp  inference_engine.cpp  main.cpp  memory_manager.cpp  router.cpp
asm_project/tests/: test_asm_benchmark.cpp  test_context.cpp  test_critical_checks.cpp  test_memory_manager.cpp  test_router.cpp
asm_project/training/: README.md  TRAINING_GUIDE.md  chunking_engine.py  directory_trainer.py  example_training.py  expert_factory.py  local_file_processor.py  local_teacher.py  local_trainer.py  requirements.txt  train_from_files.py
asm_project/training/self_learning/: background_learner.py  knowledge_ingestor.py  source_validator.py
asm_project/web_server/: README.md  app.py  requirements.txt  start.bat
asm_project/web_server/web/: app.js  index.html  styles.css
